# static

./: Cargo.toml  README.md  canister_ids.json  dfx.json
src/assets/: 404.html  index.css  index.hbs
src/static_backend/: Cargo.toml  static_backend.did
src/static_backend/src/: asset.rs  lib.rs
