[package]
name = "static_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-http-certification =  {git = "https://github.com/dfinity/response-verification", rev = "673d3194fcadf38ddacdac9346b9c08bf0e23b86"}
ic-asset-certification = {git = "https://github.com/dfinity/response-verification", rev = "673d3194fcadf38ddacdac9346b9c08bf0e23b86"}
include_dir = {version = "0.7.4", features = ["glob"]}
serde = "1.0.215"
handlebars = "6.2.0"
num-traits = "0.2.19"
hex = "0.4.3"
chrono = { version = "0.4.38", default-features = false, features = ["alloc"]}
serde_json = "1.0.133"
num-format = "0.4.4"
